refactor: apply syntactic sugar improvements
- AbstractSmell: use anyMatch() with method reference instead of filter+count
- SmellyElement, TestMethod, TestClass: sealed class hierarchy (Java 17)
- replace .collect(Collectors.toList()) with .toList() (Java 16+)
- JNoseCallable: use Objects.requireNonNullElse() (Java 9+)
- MagicNumberTest: pattern matching instanceof in checkBinary (Java 16+)
- remove unused Collectors imports